eks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bank-api-deployment
  labels:
    app: bank-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bank-api
  template:
    metadata:
      labels:
        app: bank-api
    spec:
      containers:
        - name: bank-api
          image: 590184008363.dkr.ecr.ap-southeast-1.amazonaws.com/bank:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8082
