eks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
spec:
  controller: k8s.io/ingress-nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bank-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencypt

spec:
  ingressClassName: nginx
  rules:
    - host: "api.bank.com"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: bank-api-service
                port:
                  number: 80
  tls:
    - hosts:
      - api.bank.com
    - secretName: bank-api-cert
